testing/signoz/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz-ingress
  namespace: signoz
spec:
  rules:
    - host: signoz.lab.danielsson.us.com
      http:
        paths:
          - backend:
              service:
                name: signoz-frontend
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
